--- a/src/content/pages/index.html
+++ b/src/content/pages/index.html
@@ -9,7 +9,7 @@
         <script src="js/CETEI.js"></script>
         <script>
             let c = new CETEI();
-            c.getHTML5('bo1.xml', function (data) {
+            c.getHTML5('https://raw.githubusercontent.com/hawc2/gatsby_bo/main/src/content/tei/bo1.xml', function (data) {
                 document.getElementsByTagName("body")[0].appendChild(data);
             });</script>
             <script src="https://www.verovio.org/javascript/latest/verovio-toolkit-wasm.js" defer></script>
