--- a/src/content/pages/testbo.html
+++ b/src/content/pages/testbo.html
@@ -1,15 +1,13 @@
-<!DOCTYPE html>
-<html>
-    <head>
+<div class="mainpage">
         <title>Beggar's Opera</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <link rel="stylesheet" href="tei.css">
-        <script src="CETEI.js"></script>
+        <link rel="stylesheet" href="src/static/tei.css">
+        <script src="src/static/CETEI.js"></script>
         <script>
             let c = new CETEI();
-            c.getHTML5('tei/example.xml', function (data) {
+            c.getHTML5('src/content/tei/bo1.xml', function (data) {
                 document.getElementsByTagName("body")[0].appendChild(data);
             });</script>
             <script src="https://www.verovio.org/javascript/latest/verovio-toolkit-wasm.js" defer></script>
@@ -36,6 +34,4 @@
                     }
                 });
             </script>
-    </head>
-    <body> </body>
-</html>
+</div>
