--- a/src/content/pages/tei.html
+++ b/src/content/pages/tei.html
@@ -1,4 +1,4 @@
-<div class="mainpage">
+<div>
         <title>Beggar's Opera</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +7,7 @@
         <script src="src/static/CETEI.js"></script>
         <script>
             let c = new CETEI();
-            c.getHTML5('src/content/tei/bo1.xml', function (data) {
+            c.getHTML5('src/content/pages/tei/bo1.xml', function (data) {
                 document.getElementsByTagName("body")[0].appendChild(data);
             });</script>
             <script src="https://www.verovio.org/javascript/latest/verovio-toolkit-wasm.js" defer></script>
