--- a/src/content/pages/tei.html
+++ b/src/content/pages/tei.html
@@ -1,9 +1,13 @@
-<div>
-        <title>Beggar's Opera</title>
+<div className="application">
+    <head>
+     <title>Beggar's Opera</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link rel="stylesheet" href="./src/content/tei.css">
+    </head>
+    <h1>The Beggars Opera: A Digital Edition</h1>
+        <p>
         <script src="./src/content/CETEI.js"></script>
         <script>
             let c = new CETEI();
@@ -11,27 +15,5 @@
                 document.getElementsByTagName("body")[0].appendChild(data);
             });</script>
             <script src="https://www.verovio.org/javascript/latest/verovio-toolkit-wasm.js" defer></script>
-            <script>
-                document.addEventListener("DOMContentLoaded", (event) => {
-                    Module.onRuntimeInitialized = async _ => {
-                        let tk = new verovio.toolkit();
-                        console.log("Verovio has loaded!");
-                        tk.setOptions({
-                            scale: 20,
-                            landscape: true,
-                            adjustPageWidth: true
-                        });
-                        tk.renderToSVG
-                        console.log("Verovio options:", tk.getOptions());
-
-
-                        fetch("https://raw.githubusercontent.com/BeggarsOpera/CeTEIcean/master/test.mei")
-                            .then((response) => response.text())
-                            .then((meiXML) => {
-                                let svg = tk.renderData(meiXML, {});
-                                document.getElementById("notation").innerHTML = svg;
-                            });
-                    }
-                });
-            </script>
+        </p>
 </div>
